add sweet alert & Sale edit fixes & invoice generate

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,9 +8,16 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
- *= require base
+ *= require amaran/amaran.min
+ *= require landing
+ *= require bootstrap
+ *= require font-awesome.min
+ *= require font
+ *= require app
  *= require select2/select2
-  *= require select2/theme
+ *= require select2/theme
  *= require style
-   *= require animate
+ *= require animate
+ *= require awesomplete
+ *= require sweetalert
  */
