--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -82,7 +82,7 @@
     <div class="dker pos-rlt">
       <div class="container wrapper">
         <div class="m-t-lg m-b-lg text-center">
-          Tend360 provides an easy-to-use and advanced inventory management system for small to medium sized businesses.
+          <%= SITE_NAME %> provides an easy-to-use and advanced inventory management system for small to medium sized businesses.
         </div>
       </div>
     </div>
@@ -100,7 +100,7 @@
           </p>
           <div class="">
             <h4 class="m-t-none"></h4>
-            <p class="text-muted m-t-lg"> Tend360 is the point of sale that takes care of digital receipts, inventory, and sales reports and provides valuable analytics and feedback so you can focus on your customers.</p>
+            <p class="text-muted m-t-lg"> <%= SITE_NAME %> is the point of sale that takes care of digital receipts, inventory, and sales reports and provides valuable analytics and feedback so you can focus on your customers.</p>
           </div>
         </div>
         <div class="col-sm-4" data-ride="animated" data-animation="fadeInLeft" data-delay="600">
@@ -123,9 +123,9 @@
         </div>
       </div>
       <div class="m-t-xl m-b-xl text-center wrapper">
-        <p class="h3">Download Tend360</p>
+        <p class="h3">Download <%= SITE_NAME %></p>
           <br>
-          <span class="text-info h4">Tend360 is available in the</span>
+          <span class="text-info h4"><%= SITE_NAME %> is available in the</span>
           <span class="text-info h4">App Store</span>
           <span class="text-muted h5">and</span>
           <span class="text-info h4 ">Google Play.</span>
