--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -2,7 +2,7 @@
     <div class="container">
 
         <a class="navbar-brand block text-center text-center-xs m-t-lg" href="#">Let’s create your account.</a>
-        <p class="text-center text-center-xs"><small>Signing up for Tend360 is fast and free — no commitments or long-term contracts.</small></p>
+        <p class="text-center text-center-xs"><small>Signing up for <%= SITE_NAME %> is fast and free — no commitments or long-term contracts.</small></p>
         <section class="m-t-lg row">
             <div class="col-md-8 col-md-offset-2">
 
@@ -46,7 +46,7 @@
                 <div class="line line-dashed col-md-12 m-b-lg"></div>
 
                 <div class="form-group col-md-6">
-                    <label>By clicking submit you agree to the <a href="#">Terms and Policy</a> of Tend360.</label>
+                    <label>By clicking submit you agree to the <a href="#">Terms and Policy</a> of <%= SITE_NAME %>.</label>
                 </div>
 
                 <div class="form-group col-md-6">
@@ -71,7 +71,7 @@
 <footer id="footer">
     <div class="text-center padder clearfix">
         <p>
-            <small>&copy; <%= Time.now.year%> Tend360 All Rights Reserved.</small>
+            <small>&copy; <%= Time.now.year%> <%= SITE_NAME %> All Rights Reserved.</small>
         </p>
     </div>
 </footer>
