--- a/app/views/payments/make_payment.js.erb
+++ b/app/views/payments/make_payment.js.erb
@@ -1,4 +1,5 @@
-$('.sale_totals').html("<%= escape_javascript render(:file => 'sales/shared/_sale_totals.html.erb') %>");
-$('.sale_payments').html("<%= escape_javascript render(:file => 'sales/shared/_sale_payments.html.erb') %>");
-$('.make_payment').html("<%= escape_javascript render(:file => 'sales/shared/_payment.html.erb') %>");
+$('.sale_totals').html("<%= escape_javascript render('sales/shared/sale_totals') %>");
+$('.sale_payments').html("<%= escape_javascript render('sales/shared/sale_payments') %>");
+$('.make_payment').html("<%= escape_javascript render('sales/shared/payment') %>");
 $('.modal-footer button').click();
+$('#invoice-<%= @sale.id%> .modal-body').html("<%= escape_javascript render('sales/shared/invoice') %>");
