--- a/app/views/template/_footer.html.erb
+++ b/app/views/template/_footer.html.erb
@@ -22,7 +22,7 @@
         <div class="col-sm-4" data-ride="animated" data-animation="fadeInUp" data-delay="600">
           <i class="fa fa-envelope-o fa-3x icon-muted"></i>
           <h5 class="text-uc m-b m-t-lg">Mail Us</h5>
-          <p class="text-sm"><a href="mailto:info@tend360.com">info@tend360.com</a></p>
+          <p class="text-sm"><a href="mailto:info@<%= SITE_NAME %>.com">info@<%= SITE_NAME %>.com</a></p>
         </div>
         <div class="col-sm-4" data-ride="animated" data-animation="fadeInRight" data-delay="900">
           <i class="fa fa-globe fa-3x icon-ifo"></i>
