--- a/app/views/template/_left_aside.html.erb
+++ b/app/views/template/_left_aside.html.erb
@@ -114,6 +114,39 @@
                       </a>
                     </li>
                 <% end %>
+
+            <li  class="<%= customers_active  %>">
+              <a href="#item_category"  class="<%= item_categories_active%>" >
+                <i class="fa fa-clipboard icon">
+                  <b class="bg-primary"></b>
+                </i>
+                        <span class="pull-right">
+                          <i class="fa fa-angle-down text"></i>
+                          <i class="fa fa-angle-up text-active"></i>
+                        </span>
+                <span>SETTINGS</span>
+              </a>
+              <ul class="nav lt">
+                <li >
+                  <a href="<%= item_categories_path %>" class="<%= item_categories_active%>" >
+                    <i class="fa fa-angle-right"></i>
+                    <span>Configuration</span>
+                  </a>
+                </li>
+                <li >
+                  <a href="<%= items_path %>" class="<%= item_categories_active%>" >
+                    <i class="fa fa-angle-right"></i>
+                    <span>Items</span>
+                  </a>
+                </li>
+                <li >
+                  <a href="<%= items_path %>" class="<%= item_categories_active%>" >
+                    <i class="fa fa-angle-right"></i>
+                    <span>Purchase Items</span>
+                  </a>
+                </li>
+              </ul>
+            </li>
           </ul>
         </nav>
         <!-- / nav -->
@@ -121,30 +154,30 @@
     </section>
 
     <footer class="footer lt hidden-xs b-t b-light">
-      <div id="chat" class="dropup">
-        <section class="dropdown-menu on aside-md m-l-n">
-          <section class="panel bg-white">
-            <header class="panel-heading b-b b-light">Active chats</header>
-            <div class="panel-body animated fadeInRight">
-              <p class="text-sm">No active chats.</p>
-              <p><a href="#" class="btn btn-sm btn-default">Start a chat</a></p>
-            </div>
-          </section>
-        </section>
-      </div>
-      <div id="invite" class="dropup">
-        <section class="dropdown-menu on aside-md m-l-n">
-          <section class="panel bg-white">
-            <header class="panel-heading b-b b-light">
-              John <i class="fa fa-circle text-success"></i>
-            </header>
-            <div class="panel-body animated fadeInRight">
-              <p class="text-sm">No contacts in your lists.</p>
-              <p><a href="#" class="btn btn-sm btn-facebook"><i class="fa fa-fw fa-facebook"></i> Invite from Facebook</a></p>
-            </div>
-          </section>
-        </section>
-      </div>
+      <!--<div id="chat" class="dropup">-->
+        <!--<section class="dropdown-menu on aside-md m-l-n">-->
+          <!--<section class="panel bg-white">-->
+            <!--<header class="panel-heading b-b b-light">Active chats</header>-->
+            <!--<div class="panel-body animated fadeInRight">-->
+              <!--<p class="text-sm">No active chats.</p>-->
+              <!--<p><a href="#" class="btn btn-sm btn-default">Start a chat</a></p>-->
+            <!--</div>-->
+          <!--</section>-->
+        <!--</section>-->
+      <!--</div>-->
+      <!--<div id="invite" class="dropup">-->
+        <!--<section class="dropdown-menu on aside-md m-l-n">-->
+          <!--<section class="panel bg-white">-->
+            <!--<header class="panel-heading b-b b-light">-->
+              <!--John <i class="fa fa-circle text-success"></i>-->
+            <!--</header>-->
+            <!--<div class="panel-body animated fadeInRight">-->
+              <!--<p class="text-sm">No contacts in your lists.</p>-->
+              <!--<p><a href="#" class="btn btn-sm btn-facebook"><i class="fa fa-fw fa-facebook"></i> Invite from Facebook</a></p>-->
+            <!--</div>-->
+          <!--</section>-->
+        <!--</section>-->
+      <!--</div>-->
       <a href="#nav" data-toggle="class:nav-xs" class="pull-right btn btn-sm btn-default btn-icon">
         <i class="fa fa-angle-left text"></i>
         <i class="fa fa-angle-right text-active"></i>
