--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -4,7 +4,7 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
-  <title> Tend360.com - Email</title>
+  <title> <%= SITE_NAME %>.com - Email</title>
 </head>
 <body style="background-color: #eef2f6; font-family: 'Helvetica Neue', Helvetica, Arial, Verdana, sans-serif;">
 <div align="center">
@@ -13,7 +13,7 @@
     <div align="left">
       <h1 style="font-size: 26px; font-weight: 200; color: #000; margin: 0 0 10px 0;">Hello <%=@resource.company.company_name%></h1>
       <p style="font-size: 19px;font-weight: 300; color: #666; line-height: 1.5;">
-        Welcome to <b> Tend360 </b>.
+        Welcome to <b> <%= SITE_NAME %> </b>.
         You can now start using your account instantly, In order to access your account please use the below link. <br/> <br/>
         <b><a href="<%="http://tend360.herokuapp.com/users/confirmation?confirmation_token=#{@token}"%>"  style="color:#65bd77;text-decoration:none;">Please confirm your account</a> </b>
         <!--<a href="<%#="http://#{@company.slug}.#{COMPANY_URL}/company/activate/#{@token}"%>" style="background: #65bd77; padding:3px 12px 3px 12px; display: inline-block; text-decoration: none; color: #fff; border-radius: 1px;">Activate Now</a>-->
@@ -27,7 +27,7 @@
 
     </div>
   </div>
-  <p style="font-size:13px;color:#666;" >For any questions or queries please send us an email at <a href="mailto: info@tend360.com" style="color:#65bd77;text-decoration:none;">info@tend360.com</a></p>
+  <p style="font-size:13px;color:#666;" >For any questions or queries please send us an email at <a href="mailto: info@<%= SITE_NAME %>.com" style="color:#65bd77;text-decoration:none;">info@<%= SITE_NAME %>.com</a></p>
 
 </div>
 </body>
