--- a/app/views/sales/ajax_reload.js.erb
+++ b/app/views/sales/ajax_reload.js.erb
@@ -1,17 +1,17 @@
 
 // Shared options
-$('.added_items').html("<%= escape_javascript render(:file => 'sales/shared/_added_items.html.erb') %>");
-$('.sale_totals').html("<%= escape_javascript render(:file => 'sales/shared/_sale_totals.html.erb') %>");
-$('.sale_payments').html("<%= escape_javascript render(:file => 'sales/shared/_sale_payments.html.erb') %>");
-$('.added_customer').html("<%= escape_javascript render(:file => 'sales/shared/_added_customer.html.erb') %>");
-$('#makePayment .modal-body').html("<%= escape_javascript render(:file => 'sales/shared/_payment.html.erb') %>");
-$('#customItem .modal-body').html("<%= escape_javascript render(:file => 'sales/shared/_create_custom_item.html.erb') %>");
-$('#customCustomer .modal-body').html("<%= escape_javascript render(:file => 'sales/shared/_create_custom_customer.html.erb') %>");
+$('.added_items').html("<%= escape_javascript render('sales/shared/added_items') %>");
+$('.sale_totals').html("<%= escape_javascript render('sales/shared/sale_totals') %>");
+$('.sale_payments').html("<%= escape_javascript render('sales/shared/sale_payments') %>");
+$('.added_customer').html("<%= escape_javascript render('sales/shared/added_customer') %>");
+$('#makePayment .modal-body').html("<%= escape_javascript render('sales/shared/payment') %>");
+$('#customItem .modal-body').html("<%= escape_javascript render('sales/shared/create_custom_item') %>");
+$('#customCustomer .modal-body').html("<%= escape_javascript render('sales/shared/create_custom_customer') %>");
 
-$('.print_totals').html("<%= escape_javascript render(:file => 'sales/shared/_invoice_totals.html.erb') %>");
-$('.searched_items').html("<%= escape_javascript render(:file => 'sales/shared/_searched_items.html.erb') %>");
+$('.print_totals').html("<%= escape_javascript render('sales/shared/invoice_totals') %>");
+$('.searched_items').html("<%= escape_javascript render('sales/shared/searched_items') %>");
 
-$('.searched_customers').html("<%= escape_javascript render(:file => 'sales/shared/_searched_customers.html.erb') %>");
+$('.searched_customers').html("<%= escape_javascript render('sales/shared/searched_customers') %>");
 
 
 $('.edit_sale').show();
