--- a/app/views/sales/index.html.erb
+++ b/app/views/sales/index.html.erb
@@ -64,12 +64,12 @@
                       <td><%= sale.id %></td>
                       <td><%= sale.created_at.strftime("%m/%d/%y %I:%M:%S %p")  %></td>
                       <td><%= sale.customer.blank? ? '-' : sale.customer.last_name %></td>
-                      <td><%= number_to_currency(sale.total_amount, unit: config.currency) %></td>
-                      <td><%= number_to_currency(sale.tax, unit: config.currency) %></td>
-                      <td><%= number_to_currency(sale.paid_total, unit: config.currency) %></td>
-                      <td><%= sale.remaining_balance == 0.00 && sale.payments.count > 0 ? "Paid" : "#{number_to_currency(sale.remaining_balance, unit: config.currency)}" %></td>
+                      <td><%= value_in_currency(sale.total_amount) %></td>
+                      <td><%= value_in_currency(sale.tax) %></td>
+                      <td><%= value_in_currency(sale.paid_total) %></td>
+                      <td><%= sale.remaining_balance == 0.00 && sale.payments.count > 0 ? "Paid" : "#{ value_in_currency(sale.remaining_balance)}" %></td>
                       <td class="text-right">
-                        <%=link_to raw("<i class= 'fa fa-print'></i>"),edit_sale_path(sale), class: "btn btn-dark"%>
+                        <%=link_to raw("<i class= 'fa fa-print'></i>"),invoice_sale_path(sale), class: "btn btn-dark"%>
                         <%=link_to raw("<i class= 'fa fa-pencil'></i>"),edit_sale_path(sale), class: "btn btn-info"%>
                         <%=link_to raw("<i class= 'fa fa-times'></i>"),sale, class: "btn btn-danger",:method => :delete, data: {:confirm => "Are you sure?"}%>
                       </td>
