--- a/app/views/sales/shared/_create_custom_item.html.erb
+++ b/app/views/sales/shared/_create_custom_item.html.erb
@@ -3,7 +3,7 @@
     
     <div class="form-group">
       <label>Category</label>
-      <%= f.collection_select :item_category_id, ItemCategory.all, :id, :name, {prompt: "Select a category"}, {class: "form-control"}  %>
+      <%= f.collection_select :item_category_id, current_company.item_categories, :id, :name, {prompt: "Select a category"}, {class: "form-control"}  %>
     </div>
     <div class="form-group">
       <label>Name</label>
