--- a/app/views/sales/shared/_payment.html.erb
+++ b/app/views/sales/shared/_payment.html.erb
@@ -1,9 +1,9 @@
 <div class="make_payment">
 	<h4 class="text-info"><span class="glyphicon"><%= current_company.currency %></span> Add a payment</h4>
 	<hr />
-	<%= form_for :payments, :url => url_for(:controller => "payments", :action => "make_payment"), :method => "get", :remote => true do |f| %>
+	<%= form_for :payments, url: make_payment_payments_path, method: "post", remote: true do |f| %>
 		<label>Type</label>
-		<%= f.select :payment_type, [['Credit Card', 'credit_card'], ['Cash', 'cash'], ['Check', 'check'], ['Other', 'other']], {}, { :class => "form-control" } %>
+		<%= f.select :payment_type, PAYMENTS_METHODS , {}, { :class => "form-control" } %>
 		<label>Amount</label>
 		<%= f.text_field :amount, :class => "form-control", :placeholder => "Amount", :value => number_to_currency(@sale.remaining_balance, unit: current_company.currency) %>
 		<%= f.hidden_field :sale_id, :value => @sale.id %>
