--- a/app/views/sales/shared/_sale_tab.html.erb
+++ b/app/views/sales/shared/_sale_tab.html.erb
@@ -3,23 +3,24 @@
     <h4 class="text-info"><span class="glyphicon glyphicon-search"></span> Find</h4>
 
     <hr />
-    <%= form_for :search, :url => url_for(:controller => "sales", :action => "update_line_item_options", :format => :js), :method => "get", :remote => true do |f| %>
+    <%= form_for :search, url: update_line_item_options_sales_path , format: :js, method: "post", remote: true do |f| %>
       <div class="form-group">
-        <%= f.text_field :item_name, :class => "form-control item_search_input awesomplete", list: 'items-list', :placeholder => "Search Items" %>
+        <%= f.text_field :item_name, class: "form-control item_search_input awesomplete", list: 'items-list', placeholder: "Search Items" %>
         <datalist id="items-list">
-          <% @available_items.each do |itm| %>
-          <%= link_to "link1", "#",{:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window'} %>
 
+          <% @available_items.each do |itm| %>
+            <%= link_to "link1", "#",{remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window'} %>
             <!-- Don't remove the '.|' -->
             <option value=""><%= itm.id %>.| <%= itm.name %> | stk amount: <%= itm.stock_amount %></option>
           <% end %>
+
         </datalist>
        
       </div>
       <div class="form-group">
-        <%= f.collection_select :item_category, ItemCategory.all, :id, :name, {prompt: "Select a category"}, {class: "form-control item_category_search_input"}  %>
+        <%= f.collection_select :item_category, current_company.item_categories, :id, :name, {prompt: "Select a category"}, {class: "form-control item_category_search_input"}  %>
       </div>
-      <%= f.hidden_field :sale_id, :value => @sale.id %>
+      <%= f.hidden_field :id, :value => @sale.id %>
       <%= submit_tag "search", :class => "btn btn-info btn-lg item_search" %>
     <% end %>
     <!--<button class="btn" data-toggle="modal" data-target="#customItem">-->
@@ -51,10 +52,10 @@
       <%= render :partial => 'sales/shared/sale_payments', :locals => {:f => f} %>
     </div>  
   </div>
-  <%#= f.submit 'Update Sale', :class => "btn btn-info btn-lg sale_submit" %>
+  <%= f.submit 'Update Sale', :class => "hidden btn btn-info btn-lg sale_submit" %>
 <% end %>
 
 
 <div class="print_totals visible-print">
-  <%= render :partial => 'sales/shared/invoice_totals' %>
+  <%= render partial: 'sales/shared/invoice_totals' %>
 </div>
