--- a/app/views/template/_menu.html.erb
+++ b/app/views/template/_menu.html.erb
@@ -8,12 +8,12 @@
       <i class="fa fa-cog"></i>
     </a>
   </div>
-  <ul class="nav navbar-nav hidden-xs">
-    <li class="dropdown">
-      <a href="<%= new_sale_path %>">
-        <i class="fa fa-building-o"></i>
-        <span class="font-bold">New Sale</span>
-      </a>
+  <!--<ul class="nav navbar-nav hidden-xs">-->
+    <!--<li class="dropdown">-->
+      <!--<a href="<%#= new_sale_path %>">-->
+        <!--<i class="fa fa-building-o"></i>-->
+        <!--<span class="font-bold">New Sale</span>-->
+      <!--</a>-->
       <!--<section class="dropdown-menu aside-xl on animated fadeInLeft no-borders lt">-->
         <!--<div class="wrapper lter m-t-n-xs">-->
           <!--<a href="#" class="thumb pull-left m-r">-->
@@ -46,13 +46,13 @@
           <!--</div>-->
         <!--</div>-->
       <!--</section>-->
-    </li>
-    <li>
-      <div class="m-t m-l">
-        <a href="<%= dashboard_index_path %>" class="dropdown-toggle btn btn-xs btn-primary" title="Upgrade"><i class="fa fa-long-arrow-up"></i></a>
-      </div>
-    </li>
-  </ul>
+    <!--</li>-->
+    <!--<li>-->
+      <!--<div class="m-t m-l">-->
+        <!--<a href="<%#= dashboard_index_path %>" class="dropdown-toggle btn btn-xs btn-primary" title="Upgrade"><i class="fa fa-long-arrow-up"></i></a>-->
+      <!--</div>-->
+    <!--</li>-->
+  <!--</ul>-->
   <ul class="nav navbar-nav navbar-right m-n hidden-xs nav-user">
     <li class="dropdown hidden-xs">
       <a href="#" class="dropdown-toggle dker" data-toggle="dropdown"><i class="fa fa-fw fa-search"></i></a>
