--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
   <section class="scrollable padder">
     <ul class="breadcrumb no-border no-radius b-b b-light pull-in">
       <li><a href="<%= users_path %>"><i class="fa fa-user"></i> Employees</a></li>
-      <li class="active">Show</li>
+      <li class="active"><%= @user.username%></li>
     </ul>
   </section>
   <section class="vbox">
