--- a/app/views/companies/update.html.erb
+++ b/app/views/companies/update.html.erb
@@ -1,18 +1,19 @@
-<%= form_for(@configuration, url: { controller: 'companies', action: 'update'}) do |f| %>
+
+<%= form_for(current_Company, url: { controller: 'companies', action: 'update'}) do |f| %>
 
   <div class="panel panel-default">
     <div class="panel-body">
       <div class="row">
         <div class="col-sm-6">
           <div class="form-group">
-            <label>Store Name</label>
-            <%= f.text_field :store_name, :class => "form-control", :placeholder => "Name of store" %>
+            <label>Company Name</label>
+            <%= f.text_field :company_name, :class => "form-control", :placeholder => "Name of store" %>
           </div>
         </div>
         <div class="col-sm-6">
           <div class="form-group">
             <label>Store Description</label>
-            <%= f.text_area :store_description, :class => "form-control", :placeholder => "Description of store" %>
+            <%= f.text_area :company_description, :class => "form-control", :placeholder => "Description of store" %>
           </div>
         </div>
       </div>
