--- a/app/views/template/_footer.html.erb
+++ b/app/views/template/_footer.html.erb
@@ -22,19 +22,19 @@
         <div class="col-sm-4" data-ride="animated" data-animation="fadeInUp" data-delay="600">
           <i class="fa fa-envelope-o fa-3x icon-muted"></i>
           <h5 class="text-uc m-b m-t-lg">Mail Us</h5>
-          <p class="text-sm"><a href="mailto:info@<%= SITE_NAME %>.com">info@<%= SITE_NAME %>.com</a></p>
+          <p class="text-sm"><a href="mailto:<%= current_site.email %>"><%= current_site.email %></a></p>
         </div>
         <div class="col-sm-4" data-ride="animated" data-animation="fadeInRight" data-delay="900">
           <i class="fa fa-globe fa-3x icon-ifo"></i>
-          <h5 class="text-uc m-b m-t-lg">Join Us</h5>
+          <h5 class="text-uc m-b m-t-lg">Contact Us</h5>
           <!--<p class="text-sm">Send your resume to <br><a href="mailto:hey@example.com">recruit@example.com</a></p>-->
         </div>
       </div>
       <div class="m-t-xl m-b-xl">
         <p>
-          <a href="#" class="btn btn-icon btn-rounded btn-facebook bg-empty m-sm"><i class="fa fa-facebook"></i></a>
-          <a href="#" class="btn btn-icon btn-rounded btn-twitter bg-empty m-sm"><i class="fa fa-twitter"></i></a>
-          <a href="#" class="btn btn-icon btn-rounded btn-gplus bg-empty m-sm"><i class="fa fa-google-plus"></i></a>
+          <a href="<%= current_site.facebook_url %>" class="btn btn-icon btn-rounded btn-facebook bg-empty m-sm"><i class="fa fa-facebook"></i></a>
+          <a href="<%= current_site.twitter_url %>" class="btn btn-icon btn-rounded btn-twitter bg-empty m-sm"><i class="fa fa-twitter"></i></a>
+          <a href="<%= current_site.google_url %>" class="btn btn-icon btn-rounded btn-gplus bg-empty m-sm"><i class="fa fa-google-plus"></i></a>
         </p>
         <p>
           <a href="#content" data-jump="true" class="btn btn-icon btn-rounded btn-dark b-dark bg-empty m-sm text-muted"><i class="fa fa-angle-up"></i></a>
