--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -15,7 +15,7 @@
       <p style="font-size: 19px;font-weight: 300; color: #666; line-height: 1.5;">
         Welcome to <b> <%= SITE_NAME %> </b>.
         You can now start using your account instantly, In order to access your account please use the below link. <br/> <br/>
-        <b><a href="<%="http://tend360.herokuapp.com/users/confirmation?confirmation_token=#{@token}"%>"  style="color:#65bd77;text-decoration:none;">Please confirm your account</a> </b>
+        <b><a href="<%="http://managehub360.herokuapp.com/users/confirmation?confirmation_token=#{@token}"%>"  style="color:#65bd77;text-decoration:none;">Please confirm your account</a> </b>
         <!--<a href="<%#="http://#{@company.slug}.#{COMPANY_URL}/company/activate/#{@token}"%>" style="background: #65bd77; padding:3px 12px 3px 12px; display: inline-block; text-decoration: none; color: #fff; border-radius: 1px;">Activate Now</a>-->
       </p>
 
