--- a/app/views/expenses/show.html.erb
+++ b/app/views/expenses/show.html.erb
@@ -1,34 +1,1 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Attachment:</strong>
-  <%= @expense.attachment %>
-</p>
-
-<p>
-  <strong>Start date:</strong>
-  <%= @expense.start_date %>
-</p>
-
-<p>
-  <strong>End date:</strong>
-  <%= @expense.end_date %>
-</p>
-
-<p>
-  <strong>Purpose:</strong>
-  <%= @expense.purpose %>
-</p>
-
-<p>
-  <strong>Paid time:</strong>
-  <%= @expense.paid_time %>
-</p>
-
-<p>
-  <strong>Type:</strong>
-  <%= @expense.type %>
-</p>
-
-<%= link_to 'Edit', edit_expense_path(@expense) %> |
-<%= link_to 'Back', expenses_path %>
+<%= render partial: 'form' , locals: {head: 'Expense'} %>
