expense head bar

--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -51,6 +51,7 @@
                   <th>End date</th>
                   <th>Purpose</th>
                   <th>Paid time</th>
+                  <th>Expense Type</th>
                   <th><span class="pull-right">Actions</span></th>
                 </tr>
                 </thead>
