Change password without jquery validations

--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -25,6 +25,7 @@
                   <div class="col-sm-6">
                     <div class="form-group">
                       <label>Start Date<span class="text-danger"> *</span></label>
+                      <input class="input-sm input-s datepicker-input form-control" size="16" type="text" value="12-02-2013" data-date-format="dd-mm-yyyy" >
                       <%= f.text_field :start_date , :class=>"form-control input-lg datepicker datepicker-input-expense" ,placeholder:"When did you start working here" %>
 
                       <%#= f.date_select :start_date, required: true , :class => "form-control input-lg " %>
