--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,8 @@
       <meta name="viewport" content ="width=device-width; initial-scale=1.0;">
       <%= javascript_include_tag :application, "data-turbolinks-track" => true %>
       <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
-
-		  <%= csrf_meta_tags %>
+      <%= csrf_meta_tags %>
+      <%= yield :head %>
 
     </head>
     
@@ -34,6 +34,8 @@
             </section>
           </section>
         </section>
+        <%= yield(:scripts) %>
     </body>
     <%=render partial: 'template/flash_messages'%>
+
 </html>
