--- a/app/views/template/_menu.html.erb
+++ b/app/views/template/_menu.html.erb
@@ -81,23 +81,17 @@
       <ul class="dropdown-menu animated fadeInRight">
         <span class="arrow top"></span>
         <li>
-          <%= link_to "Settings" , "#" %>
+          <a href="<%= change_password_path %>" ><i class="fa fa-pencil icon" style="margin-right:7px;"></i> Change Password</a>
         </li>
-        <!--<li>-->
-          <!--<a href="profile.html">Profile</a>-->
-        <!--</li>-->
         <!--<li>-->
           <!--<a href="#">-->
             <!--<span class="badge bg-danger pull-right">3</span>-->
             <!--Notifications-->
           <!--</a>-->
         <!--</li>-->
-        <!--<li>-->
-          <!--<a href="docs.html">Help</a>-->
-        <!--</li>-->
         <li class="divider"></li>
         <li>
-          <%= link_to( "Logout" , destroy_user_session_path, :method => :delete) %>
+          <%= link_to( raw("<i class='fa fa-power-off icon' style='margin-right:5px;color:#FB6B5B;margin-bottom: 10px;'></i>Logout") , destroy_user_session_path, :method => :delete) %>
         </li>
       </ul>
     </li>
