navbar logo , company name center , gear icon , logo without caption

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -15,6 +15,7 @@
  *= require font-awesome.min
  *= require font
  *= require app
+ *= require style
  */
 .jquery-validate-error{
   color: red !important;
