--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -18,3 +18,14 @@
 //  background-color: #65bd77;
 //  border-color: #65bd77;
 //}
+
+
+
+.company-name-center{
+    position: absolute;
+    left: 50%;
+    margin-left: -50px !important;
+    display: block;
+  margin-top: 10px;
+  font-size: 22px;
+}
