--- a/app/views/template/_bread_crums.html.erb
+++ b/app/views/template/_bread_crums.html.erb
@@ -1,5 +1,5 @@
 <section class="scrollable padder">
   <ul class="breadcrumb no-border no-radius b-b b-light pull-in">
-    <%= render_breadcrumbs :separator => ' / ' %>
+    <%= render_breadcrumbs separator: ' / ' %>
   </ul>
 </section>
