--- a/app/views/template/_menu.html.erb
+++ b/app/views/template/_menu.html.erb
@@ -1,13 +1,14 @@
-<header class="bg-dark dk header navbar navbar-fixed-top-xs">
-  <div class="navbar-header aside-md">
+<header class="bg-dark dk header navbar navbar-fixed-top-xs alter-header">
+  <div class="navbar-header aside-md alter-header-m-t">
     <a class="btn btn-link visible-xs" data-toggle="class:nav-off-screen,open" data-target="#nav,html">
       <i class="fa fa-bars"></i>
     </a>
-    <a href="#" class="navbar-brand" data-toggle="fullscreen"><%= image_tag('logo.png' ,  class: 'm-r-sm' , style: "min-height: 30px") %></a>
+    <a href="/dashboard" class="navbar-brand"><%= image_tag('logo.png' ,  class: 'm-r-sm' , style: "min-height: 45px") %></a>
     <a class="btn btn-link visible-xs" data-toggle="dropdown" data-target=".nav-user">
       <i class="fa fa-cog"></i>
     </a>
   </div>
+  <a href="#" class="navbar-brand" data-toggle="fullscreen"><p class="m-r-sm company-name-center hidden-xs hidden-sm"><%=  current_company.company_name %></p></a>
   <!--<ul class="nav navbar-nav hidden-xs">-->
     <!--<li class="dropdown">-->
       <!--<a href="<%#= new_sale_path %>">-->
@@ -53,24 +54,24 @@
       <!--</div>-->
     <!--</li>-->
   <!--</ul>-->
-  <ul class="nav navbar-nav navbar-right m-n hidden-xs nav-user">
-    <li class="dropdown hidden-xs">
-      <a href="#" class="dropdown-toggle dker" data-toggle="dropdown"><i class="fa fa-fw fa-search"></i></a>
-      <section class="dropdown-menu aside-xl animated fadeInUp">
-        <section class="panel bg-white">
-          <form role="search">
-            <div class="form-group wrapper m-b-none">
-              <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search">
-                    <span class="input-group-btn">
-                      <button type="submit" class="btn btn-info btn-icon"><i class="fa fa-search"></i></button>
-                    </span>
-              </div>
-            </div>
-          </form>
-        </section>
-      </section>
-    </li>
+  <ul class="nav navbar-nav navbar-right m-n hidden-xs nav-user alter-header-m-t">
+    <!--<li class="dropdown hidden-xs">-->
+      <!--<a href="#" class="dropdown-toggle dker" data-toggle="dropdown"><i class="fa fa-fw fa-search"></i></a>-->
+      <!--<section class="dropdown-menu aside-xl animated fadeInUp">-->
+        <!--<section class="panel bg-white">-->
+          <!--<form role="search">-->
+            <!--<div class="form-group wrapper m-b-none">-->
+              <!--<div class="input-group">-->
+                <!--<input type="text" class="form-control" placeholder="Search">-->
+                    <!--<span class="input-group-btn">-->
+                      <!--<button type="submit" class="btn btn-info btn-icon"><i class="fa fa-search"></i></button>-->
+                    <!--</span>-->
+              <!--</div>-->
+            <!--</div>-->
+          <!--</form>-->
+        <!--</section>-->
+      <!--</section>-->
+    <!--</li>-->
     <li class="dropdown">
       <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             <span class="thumb-sm avatar pull-left">
@@ -80,6 +81,9 @@
       </a>
       <ul class="dropdown-menu animated fadeInRight">
         <span class="arrow top"></span>
+        <li>
+          <a href="<%= change_password_path %>" ><i class="fa fa-pencil icon" style="margin-right:7px;"></i> My Profile</a>
+        </li>
         <li>
           <a href="<%= change_password_path %>" ><i class="fa fa-pencil icon" style="margin-right:7px;"></i> Change Password</a>
         </li>
