--- a/app/views/template/_landing_header.html.erb
+++ b/app/views/template/_landing_header.html.erb
@@ -3,7 +3,7 @@
 <header id="header" class="navbar navbar-fixed-top bg-white box-shadow b-b b-light"  data-spy="affix" data-offset-top="1">
   <div class="container">
     <div class="navbar-header">
-      <a href="#" class="navbar-brand"><img src="<%=asset_path(current_site.logo)%>" alt= "<%= current_site.name%>" class="m-r-sm" style="min-height: 50px;"><span class="text-muted"></span></a>
+      <a href="#" class="navbar-brand"><img src="<%=asset_path('logo-white.png' || current_site.logo)%>" alt= "<%= current_site.name%>" class="m-r-sm" style="min-height: 50px;"><span class="text-muted"></span></a>
       <button class="btn btn-link visible-xs" type="button" data-toggle="collapse" data-target=".navbar-collapse">
         <i class="fa fa-bars"></i>
       </button>
@@ -17,22 +17,10 @@
           <a href="#">Features</a>
         </li>
         <li>
-          <a href="<%= "#" %>">Benifits</a>
-        </li>
-        <li>
-          <a href="<%= "#" %>">Integration</a>
+          <a href="<%= "#" %>">Benefits</a>
         </li>
         <li>
           <a href="#">Plans &amp; Pricing</a>
-        </li>
-        <li>
-          <a href="<%= "#" %>">Help</a>
-        </li>
-        <li>
-          <a href="#">Blog</a>
-        </li>
-        <li>
-          <a href="#">Thrive App</a>
         </li>
         <li>
           <% if user_signed_in? %>
